@@ -394,6 +394,14 @@
         support HW VTEP functionality and main encap type is GENEVE or STT, set
         this option to <code>false</code> to use default
         non-<code>VXLAN mode</code> tunnel IDs allocation logic.
+        Please consider when OVN is running in <code>OVN-interconnect</code>
+        mode and it is using <code>VXLAN</code> encapsulation type, the max
+        number of non-transit logical switches and logical routers is reduced
+        to 1024.
+        Plese note, in order to enable <code>VXLAN</code> encapsulation type
+        for for cross-AZ traffic, <code>vxlan_mode</code> parameter in
+        <ref table="IC_NB_Global TABLE" db="OVN_IC_Northbound"/> must be set
+        to true.
       </column>
 
       <column name="options" key="always_tunnel"
@@ -887,6 +895,12 @@
         of corresponding transit switch in <ref db="OVN_IC_Northbound"/>
         database.  This kind of logical switch is created and controlled
         by <code>ovn-ic</code>.
+      </column>
+      <column name="other_config" key="ic-vxlan_mode"
+          type='{"type": "boolean"}'>
+        <code>ic-vxlan_mode</code> is set to true by <code>ovn-ic</code> when
+        it runs <code>VXLAN</code> as encapsulation protocol for cross-AZ
+        traffic. Default value is false.
       </column>
     </group>
 
